--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
       with:
         java-version: "17"
         distribution: "temurin"
-    - name: Run the Maven verify phase
-      run: mvn --batch-mode --update-snapshots verify
+    - name: Verify and test
+      run: mvn --batch-mode --update-snapshots verify && mvn test
