--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,11 @@ jobs:
       with:
         java-version: "17"
         distribution: "temurin"
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
     - name: Publish package
       run: mvn --batch-mode deploy
       env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        MAVEN_USERNAME: ${{secrets.OSSRH_USERNAME}}
+        MAVEN_PASSWORD: ${{secrets.OSSRH_TOKEN}}
