--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
           </execution>
         </executions>
       </plugin>
-    </plugins>
+    <plugin><groupId>org.sonatype.central</groupId><artifactId>central-publishing-maven-plugin</artifactId><version>0.4.0</version><extensions>true</extensions><configuration><publishingServerId>central</publishingServerId><autoPublish>true</autoPublish><tokenAuth>true</tokenAuth></configuration></plugin></plugins>
   </build>
   <dependencies>
    <dependency>
@@ -174,4 +174,4 @@
     <build.helper.maven.plugin.version>1.9.1</build.helper.maven.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
- <distributionManagement><repository><id>ossrh</id><name>Central Repository OSSRH</name><url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url></repository></distributionManagement></project>
+ <distributionManagement><repository><id>central</id><name>Central Repository Central</name><url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url></repository></distributionManagement></project>
