--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,18 +15,11 @@ jobs:
       with:
         java-version: "17"
         distribution: "temurin"
-        server-id: central
-        server-username: MAVEN_USERNAME
-        server-password: MAVEN_PASSWORD
-    - name: Create Key File
-      run: echo "$GPG_PRIVATE_KEY" > private.key
-      env: 
-        GPG_PRIVATE_KEY: ${{secrets.GPG_PRIVATE}}
-    - name: Import GPG Key
-      run: gpg --import --batch private.key
-    - name: Publish package
-      run: mvn --batch-mode deploy
-      env:
-        MAVEN_USERNAME: ${{secrets.OSSRH_USERNAME}}
-        MAVEN_PASSWORD: ${{secrets.OSSRH_TOKEN}}
-        GPG_KEYNAME: ${{secrets.GPG_KEYNAME}}
+    - name: Release Maven package
+      uses: samuelmeuli/action-maven-publish@v1.4.0
+      with:
+        maven_profiles: deploy, verify
+        gpg_private_key: ${{secrets.GPG_PRIVATE}}
+        gpg_passphrase: ""
+        nexus_username: ${{secrets.OSSRH_USERNAME}}
+        nexus_password: ${{secrets.OSSRH_TOKEN}}
