--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
                         <artifactId>junit-jupiter-engine</artifactId>
                         <version>${junit-version}</version>
                     </dependency>
-                 <dependency><groupId>org.openapitools</groupId><artifactId>jackson-databind-nullable</artifactId><version>0.2.6</version></dependency></dependencies>
+                </dependencies>
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -230,7 +230,7 @@
                 </java>
               </configuration>
             </plugin>
-        <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.6.3</version><executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals></execution></executions></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.3.0</version><executions><execution><id>attach-sources</id><goals><goal>jar</goal></goals></execution></executions></plugin></plugins>
+        </plugins>
     </build>
 
     <profiles>
@@ -252,7 +252,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId><version>3.6.3</version><executions><execution><id>attach-javadocs</id><goals><goal>jar</goal></goals></execution></executions></plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-source-plugin</artifactId><version>3.3.0</version><executions><execution><id>attach-sources</id><goals><goal>jar</goal></goals></execution></executions></plugin></plugins>
+                </plugins>
             </build>
         </profile>
     </profiles>
@@ -323,7 +323,7 @@
             <version>${junit-platform-runner.version}</version>
             <scope>test</scope>
         </dependency>
-     <dependency><groupId>org.openapitools</groupId><artifactId>jackson-databind-nullable</artifactId><version>0.2.6</version></dependency></dependencies>
+    </dependencies>
     <properties>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
